first ver of reg feature

--- a/onlibrary/app/views/dashboard/index.html.erb
+++ b/onlibrary/app/views/dashboard/index.html.erb
@@ -1,1 +1,19 @@
-<h1>Успешная регистрация</h1>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+
+<div class="bg-white p-8 rounded-lg shadow-md w-96">
+  <h2 class="text-2xl font-semibold text-center mb-6">Выход</h2>
+
+  <%= form_for :logout, url: logout_path, method: :delete do |f| %>
+    <%= f.submit "Выйти", class: "w-full bg-red-600 hover:bg-red-700 text-white font-bold py-2 rounded-md" %>
+  <% end %>
+</div>
+
+</body>
+</html>
