--- a/onlibrary/app/views/admin_dashboard/index.html.erb
+++ b/onlibrary/app/views/admin_dashboard/index.html.erb
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<div class="flex flex-col items-center justify-center h-screen bg-gray-50">
 
-<div class="bg-white p-8 rounded-lg shadow-md w-96">
-  <h2 class="text-2xl font-semibold text-center mb-6">Выход</h2>
+  <h1 class="text-4xl font-bold mb-10">Администраторская панель</h1>
 
-  <%= form_for :logout, url: logout_path, method: :delete do |f| %>
-    <%= f.submit "Выйти (админ)", class: "w-full bg-red-600 hover:bg-red-700 text-white font-bold py-2 rounded-md" %>
-  <% end %>
+  <div class="space-y-4">
+
+    <%= button_to 'Добавить книги в базу данных', admin_dashboard_new_book_path, method: :get, class: 'px-6 py-3 text-white bg-blue-600 rounded-lg shadow hover:bg-blue-700 transition' %>
+
+    <%# button_to 'Посмотреть книги из базы данных', books_path, method: :get, class: 'px-6 py-3 text-white bg-green-600 rounded-lg shadow hover:bg-green-700 transition' %>
+
+    <%#button_to 'Выдать книгу пользователю', issue_book_path, method: :get, class: 'px-6 py-3 text-white bg-yellow-600 rounded-lg shadow hover:bg-yellow-700 transition' %>
+
+    <%= button_to 'Выйти из аккаунта', logout_path, method: :delete, class: 'px-6 py-3 text-white bg-red-600 rounded-lg shadow hover:bg-red-700 transition' %>
+
+  </div>
+
 </div>
-
-</body>
-</html>
