now admin can see all books in library

--- a/onlibrary/app/views/admin_dashboard/index.html.erb
+++ b/onlibrary/app/views/admin_dashboard/index.html.erb
@@ -6,7 +6,7 @@
 
     <%= button_to 'Добавить книги в базу данных', admin_dashboard_new_book_path, method: :get, class: 'px-6 py-3 text-white bg-blue-600 rounded-lg shadow hover:bg-blue-700 transition' %>
 
-    <%# button_to 'Посмотреть книги из базы данных', books_path, method: :get, class: 'px-6 py-3 text-white bg-green-600 rounded-lg shadow hover:bg-green-700 transition' %>
+    <%= button_to 'Посмотреть книги из базы данных', admin_dashboard_all_books_path, method: :get, class: 'px-6 py-3 text-white bg-green-600 rounded-lg shadow hover:bg-green-700 transition' %>
 
     <%#button_to 'Выдать книгу пользователю', issue_book_path, method: :get, class: 'px-6 py-3 text-white bg-yellow-600 rounded-lg shadow hover:bg-yellow-700 transition' %>
 
