--- a/onlibrary/app/views/books/new.html.erb
+++ b/onlibrary/app/views/books/new.html.erb
@@ -23,6 +23,6 @@
     </div>
   <% end %>
 
-  <%= link_to 'Назад', admin_dashboard_path, class: 'text-blue-600 hover:underline' %>
+  <%= link_to 'Панель', admin_dashboard_path, class: 'text-blue-600 hover:underline' %>
 
 </div>
