--- a/onlibrary/app/views/admin_dashboard/index.html.erb
+++ b/onlibrary/app/views/admin_dashboard/index.html.erb
@@ -8,7 +8,7 @@
 
     <%= button_to 'Посмотреть книги из базы данных', admin_dashboard_all_books_path, method: :get, class: 'px-6 py-3 text-white bg-green-600 rounded-lg shadow hover:bg-green-700 transition' %>
 
-    <%#button_to 'Выдать книгу пользователю', issue_book_path, method: :get, class: 'px-6 py-3 text-white bg-yellow-600 rounded-lg shadow hover:bg-yellow-700 transition' %>
+    <%# button_to 'Выдать книгу пользователю', admin_dashboard_give_out_book_path, method: :get, class: 'px-6 py-3 text-white bg-yellow-600 rounded-lg shadow hover:bg-yellow-700 transition' %>
 
     <%= button_to 'Выйти из аккаунта', logout_path, method: :delete, class: 'px-6 py-3 text-white bg-red-600 rounded-lg shadow hover:bg-red-700 transition' %>
 
