--- a/onlibrary/app/views/books/index.html.erb
+++ b/onlibrary/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
       <th class="py-2 px-4 text-left">Название</th>
       <th class="py-2 px-4 text-left">Автор</th>
       <th class="py-2 px-4 text-left">Количество в библиотеке</th>
-      <!--<th class="py-2 px-4 text-left">Действия</th>-->
+      <th class="py-2 px-4 text-left">Действия</th>
     </tr>
     </thead>
     <tbody>
@@ -22,8 +22,13 @@
         <td class="py-2 px-4"><%= book.author %></td>
         <td class="py-2 px-4"><%= book.count %></td>
         <td class="py-2 px-4">
-          <%#link_to 'Редактировать', edit_book_path(book), class: 'text-blue-600 hover:underline' %>
-          <%#link_to 'Удалить', book, method: :delete, data: { confirm: 'Вы уверены?' }, class: 'ml-2 text-red-600 hover:underline' %>
+          <% if book.count > 0 %>
+            <%= link_to 'Выдать', admin_dashboard_give_out_book_path(book.id),
+                        { class: 'text-blue-600 hover:underline' } %>
+          <% else %>
+            <span class="text-gray-400">Недоступно</span>
+          <% end %>
+          <%# link_to 'Удалить', book, method: :delete, data: { confirm: 'Вы уверены?' }, class: 'ml-2 text-red-600 hover:underline' %>
         </td>
       </tr>
     <% end %>
