--- a/onlibrary/app/views/books/index.html.erb
+++ b/onlibrary/app/views/books/index.html.erb
@@ -5,6 +5,9 @@
   <div class="mb-4">
     <%= link_to 'Добавить новую книгу', admin_dashboard_new_book_path, class: 'inline-block px-4 py-2 text-white bg-green-600 rounded-md shadow hover:bg-green-700' %>
   </div>
+  <div class="mb-4">
+    <%= link_to 'Панель', admin_dashboard_path, class: 'text-blue-600 hover:underline' %>
+  </div>
 
   <table class="min-w-full bg-white rounded-lg shadow">
     <thead>
@@ -26,9 +29,9 @@
             <%= link_to 'Выдать', admin_dashboard_give_out_book_path(book.id),
                         { class: 'text-blue-600 hover:underline' } %>
           <% else %>
-            <span class="text-gray-400">Недоступно</span>
+            <span class="text-gray-400">Выдать</span>
           <% end %>
-          <%# link_to 'Удалить', book, method: :delete, data: { confirm: 'Вы уверены?' }, class: 'ml-2 text-red-600 hover:underline' %>
+          <%= link_to 'Принять', admin_dashboard_take_book_path(book.id), class: 'ml-2 text-red-600 hover:underline' %>
         </td>
       </tr>
     <% end %>
