--- a/onlibrary/app/views/user_dashboard/index.html.erb
+++ b/onlibrary/app/views/user_dashboard/index.html.erb
@@ -1,19 +1,10 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+<div class="flex flex-col items-center justify-center min-h-screen bg-gray-100">
+  <h1 class="text-2xl font-bold mb-6">Управление книгами</h1>
 
-<div class="bg-white p-8 rounded-lg shadow-md w-96">
-  <h2 class="text-2xl font-semibold text-center mb-6">Выход</h2>
-
-  <%= form_for :logout, url: logout_path, method: :delete do |f| %>
-    <%= f.submit "Выйти", class: "w-full bg-red-600 hover:bg-red-700 text-white font-bold py-2 rounded-md" %>
-  <% end %>
+  <div class="space-y-4">
+    <%#= button_to 'Взятые книги', borrowed_books_path, class: 'px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600' %>
+    <%#= button_to 'Каталог книг', books_catalog_path, class: 'px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600' %>
+    <%#= button_to 'История', history_path, class: 'px-4 py-2 bg-yellow-500 text-white rounded hover:bg-yellow-600' %>
+    <%= button_to 'Выход из аккаунта', logout_path, method: :delete, class: 'px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600' %>
+  </div>
 </div>
-
-</body>
-</html>
