--- a/onlibrary/app/views/user_dashboard/index.html.erb
+++ b/onlibrary/app/views/user_dashboard/index.html.erb
@@ -2,9 +2,9 @@
   <h1 class="text-2xl font-bold mb-6">Управление книгами</h1>
 
   <div class="space-y-4">
-    <%#= button_to 'Взятые книги', borrowed_books_path, class: 'px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600' %>
-    <%#= button_to 'Каталог книг', books_catalog_path, class: 'px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600' %>
-    <%#= button_to 'История', history_path, class: 'px-4 py-2 bg-yellow-500 text-white rounded hover:bg-yellow-600' %>
+    <%= button_to 'Взятые книги', user_dashboard_borrowed_books_path, method: :get, class: 'px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600' %>
+    <%= button_to 'Каталог книг', user_dashboard_all_books_path, method: :get, class: 'px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600' %>
+    <%= button_to 'История', user_dashboard_history_path, method: :get, class: 'px-4 py-2 bg-yellow-500 text-white rounded hover:bg-yellow-600' %>
     <%= button_to 'Выход из аккаунта', logout_path, method: :delete, class: 'px-4 py-2 bg-red-500 text-white rounded hover:bg-red-600' %>
   </div>
 </div>
