--- a/onlibrary/app/views/books/index.html.erb
+++ b/onlibrary/app/views/books/index.html.erb
@@ -31,7 +31,11 @@
           <% else %>
             <span class="text-gray-400">Выдать</span>
           <% end %>
+          <% if Operation.where(book: book.id, returned: nil).count != 0%>
           <%= link_to 'Принять', admin_dashboard_take_book_path(book.id), class: 'ml-2 text-red-600 hover:underline' %>
+          <% else %>
+            <span class="text-gray-400">Принять</span>
+          <% end %>
         </td>
       </tr>
     <% end %>
