--- a/onlibrary/app/views/home/index.html.erb
+++ b/onlibrary/app/views/home/index.html.erb
@@ -15,43 +15,43 @@
           align-items: center;
           justify-content: center;
           min-height: 100vh;
-          font-family: 'Menlo', monospace; /* Общий шрифт для всей страницы */
-          font-size: 1.2rem; /* Увеличил размер шрифта для всего текста*/
+          font-family: 'Menlo', monospace;
+          font-size: 1.2rem;
       }
 
       .content-container {
           text-align: center;
           max-width: 80%;
           padding: 2rem;
-          background: rgba(255, 255, 255, 0.7); /* Белый полупрозрачный фон */
+          background: rgba(255, 255, 255, 0.7);
           border-radius: 0.5rem;
       }
 
       .library-title {
-          font-size: 6rem; /* Увеличил размер шрифта */
+          font-size: 6rem;
           font-weight: bold;
           letter-spacing: 0.2rem;
           text-transform: uppercase;
-          margin-bottom: 0.5rem; /* Уменьшил отступ снизу, чтобы надпись "Добро пожаловать" была ближе */
-          color: #007bff; /* Синий цвет для заголовка */
+          margin-bottom: 0.5rem;
+          color: #007bff;
       }
 
       .welcome-text {
-          font-size: 1.5rem; /* Размер шрифта как было */
-          font-weight: bold; /* Жирный шрифт, как у заголовка */
-          letter-spacing: 0.2rem; /* Отступ между буквами, как у заголовка */
-          text-transform: uppercase;  /* Преобразование в верхний регистр, как у заголовка */
-          margin-bottom: 2rem; /* Отступ снизу */
-          color: #007bff; /* Синий цвет, как у заголовка */
+          font-size: 1.5rem;
+          font-weight: bold;
+          letter-spacing: 0.2rem;
+          text-transform: uppercase;
+          margin-bottom: 2rem;
+          color: #007bff;
       }
 
 
       .login-button {
-          background-color: #ff9800; /* Оранжевый цвет для кнопки */
-          color: #0180ff; /* Белый цвет для текста на кнопке */
+          background-color: #ff9800;
+          color: #0180ff;
           font-weight: bold;
-          padding: 1.5rem 3rem; /* Увеличил отступы */
-          font-size: 1.3rem; /* Увеличил размер текста */
+          padding: 1.5rem 3rem;
+          font-size: 1.3rem;
           border-radius: 0.5rem;
           display: inline-block;
           text-decoration: none;
@@ -59,24 +59,24 @@
           transition: background-color 0.3s ease;
       }
       .login-button:hover {
-          background-color: #e68a00; /* Более тёмный оранжевый цвет при наведении */
+          background-color: #e68a00;
       }
 
       .register-button {
-          color: #0055d4; /* Голубой цвет для ссылки */
-          font-size: 1.3rem; /* Увеличил размер текста */
+          color: #0055d4;
+          font-size: 1.3rem;
           text-decoration: none;
-          transition: color 0.3s ease, text-decoration 0.3s ease; /* Добавил transition для text-decoration */
+          transition: color 0.3s ease, text-decoration 0.3s ease;
       }
 
       .register-button:hover {
           color: #014c75;
-          text-decoration: underline; /* Добавил подчеркивание при наведении */
+          text-decoration: underline;
       }
 
       @media (max-width: 768px) {
           .library-title {
-              font-size: 4rem; /* Уменьшил размер шрифта для экрана меньше 768px */
+              font-size: 4rem;
           }
       }
   </style>
