--- a/onlibrary/app/views/user_dashboard/all_books.html.erb
+++ b/onlibrary/app/views/user_dashboard/all_books.html.erb
@@ -1,8 +1,8 @@
-<div class="flex flex-col items-center justify-center min-h-screen bg-gradient-to-r from-cyan-200 via-emerald-300 to-violet-200 p-8 relative">
+<div class="flex flex-col items-center justify-center min-h-screen bg-gradient-to-r from-cyan-200 via-emerald-300 to-cyan-200 p-8 relative">
 
   <!-- Назад -->
   <div class="absolute top-8 left-8">
-    <%= button_to user_dashboard_path, method: :get, class: 'w-12 h-12 flex items-center justify-center bg-fuchsia-300 text-white rounded-full shadow-xl hover:bg-cyan-300 transition-all duration-300 ease-in-out' do %>
+    <%= button_to user_dashboard_path, method: :get, class: 'w-12 h-12 flex items-center justify-center bg-emerald-800 text-white rounded-full shadow-xl hover:bg-cyan-800 transition-all duration-300 ease-in-out' do %>
       <span class="w-6 h-6 flex justify-center items-center">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
@@ -11,19 +11,17 @@
     <% end %>
   </div>
 
-  <!-- Заголовок -->
   <h1 class="text-6xl font-extrabold text-gray-800 mb-12 drop-shadow-lg font-montserrat">
     Список книг
   </h1>
 
-  <!-- Таблица -->
   <div class="w-full max-w-4xl bg-white shadow-lg rounded-lg overflow-hidden animate__animated animate__fadeIn">
     <table class="min-w-full text-lg text-gray-700">
-      <thead class="bg-gradient-to-l from-cyan-300 to-fuchsia-300 text-white">
+      <thead class="bg-gradient-to-l from-cyan-800 to-emerald-800 text-white">
       <tr>
-        <th class="py-4 px-6 text-left">Название книги</th>
+        <th class="py-4 px-6 text-left">Название</th>
         <th class="py-4 px-6 text-left">Автор</th>
-        <th class="py-4 px-6 text-center">Количество в библиотеке</th> <!-- Центрируем -->
+        <th class="py-4 px-6 text-center">Количество</th>
       </tr>
       </thead>
       <tbody>
