--- a/onlibrary/app/views/user_dashboard/show.html.erb
+++ b/onlibrary/app/views/user_dashboard/show.html.erb
@@ -1,7 +1,7 @@
 <div class="flex flex-col items-center justify-center min-h-screen bg-gradient-to-r from-teal-200 via-cyan-300 to-blue-400 p-8 relative">
   <!--Назад-->
   <div class="absolute top-8 left-8">
-    <%= button_to user_dashboard_path, method: :get, class: 'w-12 h-12 flex items-center justify-center bg-violet-300 text-white rounded-full shadow-xl hover:bg-lime-300 transition-all duration-300 ease-in-out' do %>
+    <%= button_to user_dashboard_path, method: :get, class: 'w-12 h-12 flex items-center justify-center bg-blue-900 text-white rounded-full shadow-xl hover:bg-teal-800 transition-all duration-300 ease-in-out' do %>
       <span class="w-6 h-6 flex justify-center items-center">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
@@ -16,11 +16,11 @@
 
   <div class="w-full max-w-4xl bg-white shadow-lg rounded-lg overflow-hidden animate__animated animate__fadeIn">
     <table class="min-w-full text-lg text-gray-700">
-      <thead class="bg-gradient-to-l from-lime-300 to-violet-300 text-white">
+      <thead class="bg-gradient-to-l from-teal-800 to-blue-900 text-white">
       <tr>
-        <th class="py-4 px-6 text-left">Название книги</th>
+        <th class="py-4 px-6 text-left">Название</th>
         <th class="py-4 px-6 text-left">Автор</th>
-        <th class="py-4 px-6 text-left">Дата взятия</th>
+        <th class="py-4 px-6 text-center">Дата выдачи</th>
       </tr>
       </thead>
       <tbody>
@@ -28,7 +28,7 @@
         <tr class="hover:bg-teal-100 transition-all duration-300 ease-in-out">
           <td class="py-4 px-6 border-b border-gray-300"><%= book.name %></td>
           <td class="py-4 px-6 border-b border-gray-300"><%= book.author %></td>
-          <td class="py-4 px-6 border-b border-gray-300">
+          <td class="py-4 px-6 border-b border-gray-300 text-center" >
             <%= Operation.order(returned: :desc).find_by_book_id(book.id).took.strftime("%d-%m-%Y") %>
           </td>
         </tr>
